Fix spelling mistake

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="PalmAI is an AI consulting agency that helps small and medium sized businesses" />
     <meta name="keywords"
       content="AI and chatbots for organizations of any size" />
-    <meta property="og:title" content="Landy - React Template" />
+    <meta property="og:title" content="Palm AI" />
     <meta property="og:type" content="website" />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
